k8s/cert-manager-webhook-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cert-manager-webhook
  namespace: cert-manager
spec:
  template:
    spec:
      containers:
        - name: cert-manager-webhook
          resources:
            requests:
              cpu: 100m
              memory: 150Mi
            limits:
              cpu: 200m
              memory: 300Mi
