k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juno-ingress
  namespace: juno-app
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - juno-hieu261204.xyz
      secretName: juno-tls-certificate
  rules:
    - host: juno-hieu261204.xyz
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: juno-backend-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: juno-frontend-service
                port:
                  number: 80
